--- a/.env.dist
+++ b/.env.dist
@@ -35,6 +35,7 @@ YUBICO_SECRET_KEY = changeit
 REDIS_URL = comwork_cloud_cache:6379
 REDIS_PASSWORD = changeit
 NATS_URL = "nats://comwork_cloud_nats:4222"
+OTEL_COLLECTOR_ENDPOINT = "comwork_cloud_otel_collector:4317"
 
 AWS_ACCESS_KEY_ID = changeit
 AWS_SECRET_ACCESS_KEY = changeit
