--- a/requirements.txt
+++ b/requirements.txt
@@ -55,4 +55,9 @@ apscheduler
 kubernetes==28.1.0
 GitPython==3.1.40 
 ruff
+psutil
 prometheus-fastapi-instrumentator
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-exporter-otlp
