--- a/.env.dist
+++ b/.env.dist
@@ -18,6 +18,7 @@ GIT_HELMCHARTS_REPO_URL = gitlab.comwork.io/kmannai/helmcharts.git
 LOCAL_CLONE_CHARTS_URL = /cloned_charts
 GIT_HELMCHARTS_REPO_ID = 2311
 FLASK_DEBUG = 0
+DAYS_BEFORE_CLOSURE = 7
 SENDGRID_API_KEY = changeit
 TOKEN_EXPIRATION_TIME = 7200
 JWT_SECRET_KEY= changeit
