--- a/.env.dist
+++ b/.env.dist
@@ -1,50 +1,51 @@
 APP_ENV=local
 LOG_LEVEL=DEBUG
 API_URL=http://localhost:8000
-PULUMI_ACCESS_TOKEN = changeit
-PULUMI_CONFIG_PASSPHRASE= changeit
+PULUMI_ACCESS_TOKEN=changeit
+PULUMI_CONFIG_PASSPHRASE=changeit
 COMPANY_NAME=Comwork
 PULUMI_BACKEND_URL=s3://bucket-name-changeit?endpoint=s3.region.changeit.cloud
 SLACK_TOKEN=changeit
-SCW_ACCESS_KEY = changeit
-SCW_PROJECT_ID = changeit
-SCW_SECRET_KEY = changeit
-DYNAMIC_REPO_GROUPID = 159
-GIT_EMAIL = changeit@changeit.com
-GIT_PLAYBOOK_REPO_URL = http://changeit.changeit.com
-GIT_PRIVATE_TOKEN = changeit
-GIT_USERNAME = changeit
-GIT_HELMCHARTS_REPO_URL = gitlab.comwork.io/kmannai/helmcharts.git
-LOCAL_CLONE_CHARTS_URL = /cloned_charts
-GIT_HELMCHARTS_REPO_ID = 2311
-FLASK_DEBUG = 0
-DAYS_BEFORE_CLOSURE = 7
-SENDGRID_API_KEY = changeit
-TOKEN_EXPIRATION_TIME = 7200
+SCW_ACCESS_KEY=changeit
+SCW_PROJECT_ID=changeit
+SCW_SECRET_KEY=changeit
+DYNAMIC_REPO_GROUPID=159
+GIT_EMAIL=changeit@changeit.com
+GIT_PLAYBOOK_REPO_URL=http://changeit.changeit.com
+GIT_PRIVATE_TOKEN=changeit
+GIT_USERNAME=changeit
+GIT_HELMCHARTS_REPO_URL=gitlab.comwork.io/kmannai/helmcharts.git
+PLAYBOOK_REPO_PROJECTID=changeit
+LOCAL_CLONE_CHARTS_URL=/cloned_charts
+GIT_HELMCHARTS_REPO_ID=2311
+FLASK_DEBUG=0
+DAYS_BEFORE_CLOSURE=7
+SENDGRID_API_KEY=changeit
+TOKEN_EXPIRATION_TIME=7200
 JWT_SECRET_KEY= changeit
-POSTGRES_HOST_AUTH_METHOD = changeit
-POSTGRES_PASSWORD = cloud
-POSTGRES_HOST = comwork_cloud_db
-POSTGRES_PORT = 5432
-POSTGRES_USER = cloud
-POSTGRES_DB = cloud
-POSTGRES_HOST_AUTH_METHOD = trust
-STRIPE_API_KEY = changeit
-STRIPE_WEBHOOK_SECRET = changeit
-YUBICO_CLIENT_ID = changeit
-YUBICO_SECRET_KEY = changeit
-REDIS_URL = comwork_cloud_cache:6379
-REDIS_PASSWORD = changeit
-NATS_URL = "nats://comwork_cloud_nats:4222"
-OTEL_COLLECTOR_ENDPOINT = "comwork_cloud_otel_collector:4317"
+POSTGRES_HOST_AUTH_METHOD=changeit
+POSTGRES_PASSWORD=cloud
+POSTGRES_HOST=comwork_cloud_db
+POSTGRES_PORT=5432
+POSTGRES_USER=cloud
+POSTGRES_DB=cloud
+POSTGRES_HOST_AUTH_METHOD=trust
+STRIPE_API_KEY=changeit
+STRIPE_WEBHOOK_SECRET=changeit
+YUBICO_CLIENT_ID=changeit
+YUBICO_SECRET_KEY=changeit
+REDIS_URL=comwork_cloud_cache:6379
+REDIS_PASSWORD=changeit
+NATS_URL="nats://comwork_cloud_nats:4222"
+OTEL_COLLECTOR_ENDPOINT="comwork_cloud_otel_collector:4317"
 
-AWS_ACCESS_KEY_ID = changeit
-AWS_SECRET_ACCESS_KEY = changeit
-BUCKET_STATE_REGION = changeit
-API_VERSION = v1
+AWS_ACCESS_KEY_ID=changeit
+AWS_SECRET_ACCESS_KEY=changeit
+BUCKET_STATE_REGION=changeit
+API_VERSION=v1
 APP_VERSION=1.0
-GITLAB_URL = https://gitlab.changeit
-EMAIL_EXPEDITOR = cloud@comwork.io
+GITLAB_URL=https://gitlab.changeit
+EMAIL_EXPEDITOR=cloud@comwork.io
 OVH_ENDPOINT=changeit
 OVH_APPLICATION_KEY=changeit
 OVH_APPLICATION_SECRET=changeit
@@ -52,9 +53,9 @@ OVH_CONSUMER_KEY=changeit
 OVH_SERVICENAME=changeit
 DEFAULT_PROVIDER=scaleway
 
-AWS_STRATEGY_ACCESS_KEY_ID = changeit
-AWS_STRATEGY_SECRET_ACCESS_KEY = changeit
-AWS_STRATEGY_DEFAULT_REGION = changeit
+AWS_STRATEGY_ACCESS_KEY_ID=changeit
+AWS_STRATEGY_SECRET_ACCESS_KEY=changeit
+AWS_STRATEGY_DEFAULT_REGION=changeit
 
 CLOUDFLARE_API_TOKEN=changeit
 
@@ -62,12 +63,19 @@ GCP_APPLICATION_CREDENTIALS=changeit
 GCP_PROJECT_ID=changeit
 GCP_NETWORK=default
 
+AZURE_CLIENT_ID=changeit
+AZURE_CLIENT_SECRET=changeit
+AZURE_TENANT_ID=changeit
+AZURE_SUBSCRIPTION_ID=changeit
+AZURE_RESOURCE_GROUP_NAME=changeit
+
 FAAS_API_URL=http://comwork_cloud_api:5000
 FAAS_API_TOKEN="366a119d-b23d-4b76-93e8-a0e24b12abaf"
 FAAS_WAIT_STARTUP_TIME=30
+API_MAX_RESULTS=10
 
-CONSUMER_CHANNEL = faas
-TRIGGERS_CHANNEL = faastriggers
-CONSUMER_GROUP = faas
-TRIGGERS_GROUP = faastriggers
-CONSUMER_SLEEP_TIME = 3600
+CONSUMER_CHANNEL=faas
+TRIGGERS_CHANNEL=faastriggers
+CONSUMER_GROUP=faas
+TRIGGERS_GROUP=faastriggers
+CONSUMER_SLEEP_TIME=3600
