--- a/.env.dist
+++ b/.env.dist
@@ -79,3 +79,12 @@ TRIGGERS_CHANNEL=faastriggers
 CONSUMER_GROUP=faas
 TRIGGERS_GROUP=faastriggers
 CONSUMER_SLEEP_TIME=3600
+
+BUCKET_URL=
+SCW_ACCESS_KEY=
+SCW_SECRET_KEY=
+BUCKET_NAME=
+BUCKET_REGION=
+
+ATTACHMENT_BUCKET_URL=
+ATTACHMENT_BUCKET_NAME=
