--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__
 node-conv
 cloud_environments_local.yml
 venv
+src/utils/easy-work
+docker-compose-local-*.yml
+azure-app-credentials.json
