--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ markupsafe>=2.1.1
 pulumi_azure_native
 pulumi-openstack==3.9.0
 pulumi-aws>=5.0.0, <6.0.0
-pulumi-gcp>=6.57.0,<7.0.0
+pulumi-gcp==7.35.0
 azure-mgmt-compute==30.6.0
+azure-mgmt-dns==8.1.0
 azure-identity==1.15.0
 pulumiverse-scaleway==1.15.0
 pulumi-cloudflare==4.13.0
@@ -14,6 +15,7 @@ google-cloud-storage==2.10.0
 google-cloud-artifact-registry==1.8.1
 google-api-python-client==2.91.0
 google-cloud-compute
+google-cloud-dns
 jinja2>=2.7
 pyyaml>=6.0
 protobuf>=3.19.0
