--- a/.env.dist
+++ b/.env.dist
@@ -1,90 +1,128 @@
+# Application Configuration
 APP_ENV=local
 LOG_LEVEL=DEBUG
+FLASK_DEBUG=0
 API_URL=http://localhost:8000
+API_VERSION=v1
+APP_VERSION=1.0
+COMPANY_NAME=Comwork
+
+# Pulumi Configuration
 PULUMI_ACCESS_TOKEN=changeit
 PULUMI_CONFIG_PASSPHRASE=changeit
-COMPANY_NAME=Comwork
 PULUMI_BACKEND_URL=s3://bucket-name-changeit?endpoint=s3.region.changeit.cloud
-SLACK_TOKEN=changeit
-SCW_ACCESS_KEY=changeit
-SCW_PROJECT_ID=changeit
-SCW_SECRET_KEY=changeit
-DYNAMIC_REPO_GROUPID=159
+
+# Git Configuration
 GIT_EMAIL=changeit@changeit.com
 GIT_PLAYBOOK_REPO_URL=http://changeit.changeit.com
 GIT_PRIVATE_TOKEN=changeit
 GIT_USERNAME=changeit
 GIT_HELMCHARTS_REPO_URL=gitlab.comwork.io/kmannai/helmcharts.git
+GIT_HELMCHARTS_REPO_ID=2311
 PLAYBOOK_REPO_PROJECTID=changeit
 LOCAL_CLONE_CHARTS_URL=/cloned_charts
-GIT_HELMCHARTS_REPO_ID=2311
-FLASK_DEBUG=0
-DAYS_BEFORE_CLOSURE=7
-SENDGRID_API_KEY=changeit
-TOKEN_EXPIRATION_TIME=7200
-JWT_SECRET_KEY= changeit
-POSTGRES_HOST_AUTH_METHOD=changeit
-POSTGRES_PASSWORD=cloud
-POSTGRES_HOST=comwork_cloud_db
-POSTGRES_PORT=5432
-POSTGRES_USER=cloud
+
+# Slack Integration
+SLACK_TOKEN=changeit
+
+# Scaleway Configuration
+SCW_ACCESS_KEY=changeit
+SCW_PROJECT_ID=changeit
+SCW_SECRET_KEY=changeit
+
+# GitLab Configuration
+GITLAB_URL=https://gitlab.changeit
+
+# Database Configuration
 POSTGRES_DB=cloud
+POSTGRES_USER=cloud
+POSTGRES_PASSWORD=cloud
+POSTGRES_PORT=5432
+POSTGRES_HOST=comwork_cloud_db
 POSTGRES_HOST_AUTH_METHOD=trust
-STRIPE_API_KEY=changeit
-STRIPE_WEBHOOK_SECRET=changeit
-YUBICO_CLIENT_ID=changeit
-YUBICO_SECRET_KEY=changeit
+POSTGRES_SIZE_POOL=30
+POSTGRES_MAX_OVERFLOW=10
+POSTGRES_POOL_TIMEOUT=30
+POSTGRES_POOL_RECYCLE=1800
+
+# Redis Configuration
 REDIS_URL=comwork_cloud_cache:6379
 REDIS_PASSWORD=changeit
+
+# NATS Configuration
 NATS_URL="nats://comwork_cloud_nats:4222"
+
+# OpenTelemetry Configuration
 OTEL_COLLECTOR_ENDPOINT="comwork_cloud_otel_collector:4317"
 
+# AWS Configuration
 AWS_ACCESS_KEY_ID=changeit
 AWS_SECRET_ACCESS_KEY=changeit
-BUCKET_STATE_REGION=changeit
-API_VERSION=v1
-APP_VERSION=1.0
-GITLAB_URL=https://gitlab.changeit
-EMAIL_EXPEDITOR=cloud@comwork.io
-OVH_ENDPOINT=changeit
-OVH_APPLICATION_KEY=changeit
-OVH_APPLICATION_SECRET=changeit
-OVH_CONSUMER_KEY=changeit
-OVH_SERVICENAME=changeit
-DEFAULT_PROVIDER=scaleway
-
 AWS_STRATEGY_ACCESS_KEY_ID=changeit
 AWS_STRATEGY_SECRET_ACCESS_KEY=changeit
 AWS_STRATEGY_DEFAULT_REGION=changeit
+BUCKET_STATE_REGION=changeit
 
-CLOUDFLARE_API_TOKEN=changeit
+# Stripe Integration
+STRIPE_API_KEY=changeit
+STRIPE_WEBHOOK_SECRET=changeit
 
-GCP_APPLICATION_CREDENTIALS=changeit
-GCP_PROJECT_ID=changeit
-GCP_NETWORK=default
+# YubiKey Integration
+YUBICO_CLIENT_ID=changeit
+YUBICO_SECRET_KEY=changeit
 
-AZURE_CLIENT_ID=changeit
-AZURE_CLIENT_SECRET=changeit
-AZURE_TENANT_ID=changeit
-AZURE_SUBSCRIPTION_ID=changeit
-AZURE_RESOURCE_GROUP_NAME=changeit
+# SendGrid Integration
+SENDGRID_API_KEY=changeit
 
-FAAS_API_URL=http://comwork_cloud_api:5000
-FAAS_API_TOKEN="366a119d-b23d-4b76-93e8-a0e24b12abaf"
-FAAS_WAIT_STARTUP_TIME=30
-API_MAX_RESULTS=10
+# Token and Authentication Settings
+TOKEN_EXPIRATION_TIME=7200
+JWT_SECRET_KEY= changeit
 
+# Consumer and Trigger Configuration
 CONSUMER_CHANNEL=faas
 TRIGGERS_CHANNEL=faastriggers
 CONSUMER_GROUP=faas
 TRIGGERS_GROUP=faastriggers
 CONSUMER_SLEEP_TIME=3600
 
-BUCKET_URL=
-SCW_ACCESS_KEY=
-SCW_SECRET_KEY=
-BUCKET_NAME=
-BUCKET_REGION=
+# Cloudflare Configuration
+CLOUDFLARE_API_TOKEN=changeit
 
-ATTACHMENT_BUCKET_URL=
-ATTACHMENT_BUCKET_NAME=
+# Google Cloud Platform (GCP) Configuration
+GCP_APPLICATION_CREDENTIALS=changeit
+GCP_PROJECT_ID=changeit
+GCP_NETWORK=default
+
+# Azure Configuration
+AZURE_CLIENT_ID=changeit
+AZURE_CLIENT_SECRET=changeit
+AZURE_TENANT_ID=changeit
+AZURE_SUBSCRIPTION_ID=changeit
+AZURE_RESOURCE_GROUP_NAME=changeit
+
+# OVH Configuration
+OVH_ENDPOINT=changeit
+OVH_APPLICATION_KEY=changeit
+OVH_APPLICATION_SECRET=changeit
+OVH_CONSUMER_KEY=changeit
+OVH_SERVICENAME=changeit
+
+# FAAS (Function as a Service) Configuration
+FAAS_API_URL=http://comwork_cloud_api:5000
+FAAS_API_TOKEN="366a119d-b23d-4b76-93e8-a0e24b12abaf"
+FAAS_WAIT_STARTUP_TIME=30
+
+# Miscellaneous
+DAYS_BEFORE_CLOSURE=7
+EMAIL_EXPEDITOR=cloud@comwork.io
+DEFAULT_PROVIDER=scaleway
+
+# Bucket Configuration
+BUCKET_URL=changeit
+BUCKET_NAME=changeit
+BUCKET_REGION=changeit
+ATTACHMENT_BUCKET_URL=changeit
+ATTACHMENT_BUCKET_NAME=changeit
+
+# Dynamic Repository Configuration
+DYNAMIC_REPO_GROUPID=159
