--- a/.env.dist
+++ b/.env.dist
@@ -99,6 +99,8 @@ AZURE_CLIENT_SECRET=changeit
 AZURE_TENANT_ID=changeit
 AZURE_SUBSCRIPTION_ID=changeit
 AZURE_RESOURCE_GROUP_NAME=changeit
+AZURE_VM_ADMIN_USERNAME=changeit
+AZURE_VM_ADMIN_PASSWORD=changeit
 
 # OVH Configuration
 OVH_ENDPOINT=changeit
