--- a/.env.dist
+++ b/.env.dist
@@ -128,3 +128,5 @@ ATTACHMENT_BUCKET_NAME=changeit
 
 # Dynamic Repository Configuration
 DYNAMIC_REPO_GROUPID=159
+
+DOMAIN="http://localhost:3000"
