--- a/cloud_environments_local.yml.dist
+++ b/cloud_environments_local.yml.dist
@@ -259,7 +259,7 @@ providers:
         az_subnet_name: cwcloud-subnet-northeu
         az_security_group_name: cwcloud-security-group-northeu
     instance_types: ["Standard_DS2_v2"]
-    storage_types: ["Standard_LRS", "Premium_LRS"]
+    bucket_types: ["Standard_LRS", "Premium_LRS"]
     storage_available_regions: ["westeurope", "northeurope"]
     registry_types: ["public", "private"]
     registry_available_regions: ["westeurope", "northeurope"]
